--- a/bookstore/docker-compose.yml
+++ b/bookstore/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.9'
-
 services:
   db:
     image: postgres:13.0-alpine
@@ -15,13 +13,17 @@ services:
     build: .
     command: python manage.py runserver 0.0.0.0:8000
     volumes:
-      - . :/app/
+      - type: bind
+        source: C:\Users\55539\desktop\twitter\bookstore
+        target: /app
     ports:
       - 8000:8000
     env_file:
       - ./env.dev
     depends_on:
       - db
+    environment:
+      - PYTHONUNBUFFERED=1
 
 volumes:
   postgres_data:
