--- a/bookstore/docker-compose.yml
+++ b/bookstore/docker-compose.yml
@@ -15,7 +15,8 @@ services:
     volumes:
       - type: bind
         source: C:\Users\55539\desktop\twitter\bookstore
-        target: /app
+        target: 
+          - app_data: /app
     ports:
       - 8000:8000
     env_file:
@@ -27,3 +28,4 @@ services:
 
 volumes:
   postgres_data:
+  app_data:
