--- a/bookstore/pyproject.toml
+++ b/bookstore/pyproject.toml
@@ -4,12 +4,12 @@ version = "0.1.0"
 description = "Bookstore API"
 authors = ["A97Campos <andrewleandro97@gmail.com>"]
 [tool.poetry.dependencies]
-python = "^3.7"
+python = ">=3.8,<4.0"
 Django = "^3.2.8"
 django-rest-framework = "^0.1.0"
 django-extensions = "^3.1.3"
 django-debug-toolbar = "^3.2.2"
-psycopg2-binary = "^2.9.2"
+psycopg2-binary = "^2.9.10"
 autopep8 = "^1.6.0"
 flake8 = "^4.0.1"
 isort = "^5.10.1"
